--- a/frontend/style.css
+++ b/frontend/style.css
@@ -331,11 +331,23 @@ ion-icon {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
+  margin-bottom: 100px;
 }
 
 .modal-content {
   background-color: #f4f4f4;
   margin: 15% auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 400px;
+}
+
+.modal-contentt {
+  background-color: #f4f4f4;
+  margin-left: 750px;
+  margin-right: 750px;
+  margin-top: 90px;
+  margin-bottom: 50px;
   padding: 20px;
   border-radius: 10px;
   width: 400px;
